--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
+add "enable event handling"-flag if overhead from event handling is measureable
 specifier field is pretty redundant
 create a bunch of wrapper functions with events (commands, httpRequests etc)
 make sure http server stop only returns after all its http requests finished!!
