--- a/todo.txt
+++ b/todo.txt
@@ -13,6 +13,7 @@ build specialized "dashboards" for various packages. for example to add topics t
 
 "systemge client" - a mechanism that receives a list of listeners that it will attempt to connect to and maintain that connection through reconnect attempts
     +(group of clients connected to various listeners that can be messaged conveniently)
+    +(insights whether all listeners are connected to currently (was handled through the services status (started/pending)))
 
 add sample how systemge can be used as a proxy
 
