--- a/todo.txt
+++ b/todo.txt
@@ -11,7 +11,7 @@ build specialized "dashboards" for various packages. for example to add topics t
 -httpServerDashboard
 -oauth2ServerDashboard
 
-single request server and broker-system - will work based on systemge.Connection and IMessage i think (similar to existing functionality)
+single request server and broker-system will work based on systemge.Connection and IMessage i think (similar to existing functionality)
 
 (refactor brokerResolver to use singleRequestServer)
 
