--- a/todo.txt
+++ b/todo.txt
@@ -10,7 +10,7 @@ single request server and broker-system will work based on systemge.Connection a
 consider/support config changes at runtime.
 right now this is not officially supported and works for some fields, but not for others.
 
-add tool to support clustering
+add tool to support clustering/load balancing
 
 consider systemge listener and connection utilizing grpc (figure out what the benefits would be)
 
