--- a/todo.txt
+++ b/todo.txt
@@ -74,3 +74,5 @@ consider/support config changes at runtime.
 (refactor brokerResolver to use singleRequestServer)
 
 single request server and broker-system will work based on systemge.Connection and IMessage i think (similar to existing functionality)
+
+add connection lifetime config to listeners
