--- a/todo.txt
+++ b/todo.txt
@@ -75,6 +75,6 @@ add options for heartbeats to tcp and websocket.
 
 chang connection lifetime to work based on tools.timeout
 
-build more abstract version on top of servicdReader with deserializer and corresponding handler func (generics)
-
 build more abstract way to message including serializer and correaponding funcs (generics)
+
+build integrate onClose handlers for connections 
