--- a/todo.txt
+++ b/todo.txt
@@ -78,3 +78,5 @@ chang connection lifetime to work based on tools.timeout
 build more abstract way to message including serializer and correaponding funcs (generics)
 
 build integrate onClose handlers for connections 
+
+add more abstraction in general after gathering some experience implementing samples
