--- a/todo.txt
+++ b/todo.txt
@@ -82,3 +82,4 @@ build integrate onClose handlers for connections
 add more abstraction in general after gathering some experience implementing samples
 
 consider adding object abstraction (serialize/deserialize) to connections
+(maybe a more abstract connection type [O] on top of the low level connections based on [D])
