--- a/todo.txt
+++ b/todo.txt
@@ -80,3 +80,5 @@ add more abstraction in general after gathering some experience implementing sam
 add abstraction for listener to be able to accept typedConnections
 
 add a "multiConnection" or something along those lines, that allows for more efficient typed messaging (right now, writing the same message to typed Connections would require serialize for every operation )
+
+resolve domain only once and save ip
