--- a/todo.txt
+++ b/todo.txt
@@ -81,4 +81,4 @@ add abstraction for listener to be able to accept typedConnections
 
 add a "multiConnection" or something along those lines, that allows for more efficient typed messaging (right now, writing the same message to typed Connections would require serialize for every operation )
 
-resolve domain only once and save ip
+(add optional ip field. if empty resolve the domain and save ip. if no domain either error)
