--- a/todo.txt
+++ b/todo.txt
@@ -80,3 +80,16 @@ add more abstraction in general after gathering some experience implementing sam
 add a "multiConnection" or something along those lines, that allows for more efficient typed messaging (right now, writing the same message to typed Connections would require serialize for every operation )
 
 (add optional ip field. if empty resolve the domain and save ip. if no domain either error)
+
+handlers todo:
+
+(accept)control
+accept session
+accept queue
+
+(read)control
+read queue
+
+writer
+
+heartbeat
