--- a/todo.txt
+++ b/todo.txt
@@ -82,7 +82,7 @@ add a "multiConnection" or something along those lines, that allows for more eff
 (add optional ip field. if empty resolve the domain and save ip. if no domain either error)
 
 "server modules" (handler funcs that can be chained)
-(add mechanism to build boolean conditions using these handler funcs and not just simply chain them sequentially)
+(add mechanism to build boolean conditions using these (and custom) handler funcs and not just simply chain them sequentially)
 :
 
 (accept)control
