--- a/todo.txt
+++ b/todo.txt
@@ -77,12 +77,7 @@ add more abstraction in general after gathering some experience implementing sam
 
 (add optional ip field. if empty resolve the domain and save ip. if no domain either error)
 
-"server modules" (handler funcs that can be chained)
-add mechanism to build boolean conditions using these (and custom) handler funcs and not just simply chain them sequentially - such as (x and y) or z (z only executed if x and y fails)
-:
-
+"server modules" (handler funcs that can be chained):
 heartbeat
-    
 publishSubscribe
-
 add (proper) mechanism to use all kinds of queues with handlers
